Next part of rewriting Patcher plugin

--- a/README
+++ b/README
@@ -17,7 +17,7 @@ to do step 2 instead :)
 directory) and filling the FTP login details. Example below:
 
 Comment out if you want to disable FTP layer
-$ftp_data = array(
+$ftpData = array(
 	'host' => '127.0.0.1',
 	'port' => 21,
 	'user' => 'fluxbb',
